# ml_logger

./: .Makefile.swp  .gitignore  .graphqlconfig  CONTRIBUTING.md  LICENSE.md  Makefile  README  README.md  VERSION  graphql.config.json  how_to_deploy.md  package-lock.json  package.json  pyproject.toml  readthedocs.yml  service-worker.js  setup.py
.run/: pytest for test_pytorch_methods.test_torch_load.run.xml  pytest for test_pytorch_methods.test_torch_load_sync.run.xml  pytest for test_pytorch_methods.test_torch_save.run.xml  pytest in test_pytorch_methods.py.run.xml  train.run.xml
docker/: Dockerfile  Makefile  README.md
docs/: conf.py  develop.rst  index.rst  requirements.txt  setting_up.rst
docs/source/: conf.py  index.rst
ml-dash-client/: .babelrc  README.md  package-lock.json  package.json  schema.graphql
ml-dash-client/public/: index.html  manifest.json  monaco-editor-worker-loader-proxy.js
ml-dash-client/scripts/: generate_schema.py
ml-dash-client/src/: App.js  App.test.js  Theme.js  index.js
ml-dash-server/: .gitignore  MANIFEST.in  Makefile  README  README.md  VERSION  setup.py
ml-dash-server/app-build/: asset-manifest.json  index.html  service-worker.js
ml-dash-server/dash_server_specs/: create_experiments.py  test_ml_dash.py
ml-dash-server/docs/: conf.py  requirements.txt
ml-dash-server/ml-dash-client-dist/: asset-manifest.json  index.html  precache-manifest.108e12c1b44b90a8316d7fb4dd38ea76.js  precache-manifest.61fd68ff1c3238f9c2699f004d394328.js  precache-manifest.6e8875304f5fedb67c7d558761855bb4.js  precache-manifest.aa754224377ee6294864df280d47098b.js  precache-manifest.b45edffc378bf5510d10d1b5c80b8481.js  precache-manifest.cbf36481b16b16c7edf9baccbd4287f0.js  service-worker.js
ml-dash-server/ml_dash/: app.py  (+8 more)
ml-vis-app/: .gitignore  package-lock.json  package.json
ml_dash/: .gitignore  Makefile  README.md  setup.py
ml_logger/: .gitignore  Makefile  README  README.md  VERSION  __init__.py  full_duplex.py  helpers.py  job.py  log_client.py  ml_logger.py  nb.py  requests.py  requirements-dev.txt  serdes.py  server.py  server.test.py  setup.py  structs.py  struts.py  test_ml_logger.py  test_server.py  test_tf_logger.py
ml_logger_tests/: test_file_utils.py  test_helpers.py  test_instr.py  test_ml_logger.py  test_prefix_cases.py  test_pytorch_methods.py  test_summary_cache.py
ml_scripts/: download.py  upload.py
ml_vis/: log_client.py  serdes.py  server.py  server.test.py
notes/: Graphene-python Relay Modern Schema Design Guideline.md  On_Development.md  README.md  todos.md
scratch/: class_method_and_attribute_demo.py  create_projects.py  demo.py  example.py  file_watcher_2.py  log_pyplot_demo.py  populate_index.py  read_files.py  script.py  server_sent_events.py
tests/: conftest.py  test_ml_logger.py  test_server.py  test_tensorflow_methods.py
vis_server/: config.py  file_events.py  file_handlers.py  main.py  mime_types.py
(+241 files in other folders)
